Fixed issue with contract vehicles filters. Added jquery script to angular.json

--- a/app/frontend/src/app/pages/search/filters.component.html
+++ b/app/frontend/src/app/pages/search/filters.component.html
@@ -10,7 +10,7 @@
 
   <li>
     <discovery-filter-contract-vehicles (emmitSelected)="activateSubmit($event)" (emmitItem)="filterOthersByVehicles($event)"
-      (emmitLoaded)="getResults($event)"></discovery-filter-contract-vehicles>
+      (emmitLoaded)="getResults($event)" [sharedFiltersLoaded]="sharedFiltersLoaded"></discovery-filter-contract-vehicles>
 
   </li>
   <li>
