Added PSCs to filters and compare table Added table sort arrows and tooltip Added Tier, POC & Ordering Guide to compare table

--- a/app/frontend/src/app/pages/search/filters/filter-contract-vehicles.component.html
+++ b/app/frontend/src/app/pages/search/filters/filter-contract-vehicles.component.html
@@ -6,8 +6,8 @@
     <discovery-spinner *ngIf="!items"></discovery-spinner>
     <ul class="usa-unstyled-list">
       <li *ngFor="let item of items">
-        <input id="{{id}}-{{item.id}}" (change)="onChange(item.id, item.name, $event.target.checked)" name="{{id}}-{{item.id}}" type="checkbox"
-          value="{{item.id}}" [checked]="item.checked">
+        <input id="{{id}}-{{item.id}}" (change)="onChange(item.id, item.name, $event.target.checked)" name="{{id}}-{{item.id}}"
+          type="checkbox" value="{{item.id}}" [checked]="item.checked">
         <label for="{{id}}-{{item.id}}">{{item.name}}</label>
       </li>
     </ul>
