--- a/app/frontend/src/app/pages/search/vendor-detail.component.html
+++ b/app/frontend/src/app/pages/search/vendor-detail.component.html
@@ -3,105 +3,132 @@
 <!-- End Spinner -->
 <div class="well">
   <div class="usa-grid col-container pad-top-bottom">
+
     <div *ngIf="vendor" class="usa-width-one-whole">
       <div class="pad-all"><a [routerLink]="['/search']" queryParamsHandling="preserve" class="back"><span class="icon-arrow-left pull-left"></span>Back
           to search
           results</a>
-        <h2>{{vendor.name | titlecase}}</h2>
-        <hr>
-        <div class="usa-grid">
-          <div class="usa-width-one-third">
-            <h6 class="usa-heading-alt">SAM Registration Expires on:</h6>
-            <blockquote><strong>{{vendor?.sam_expiration_date | date}}</strong></blockquote>
-            <h6 class="usa-heading-alt">DUNS:</h6>
-            <blockquote><strong>{{vendor?.duns}}</strong></blockquote>
-          </div>
-          <div class="usa-width-one-third">
-            <h6 class="us`a-heading-alt">CAGE Code:</h6>
-            <blockquote><strong>{{vendor?.cage}}</strong></blockquote>
-            <h6 class="usa-heading-alt">Employees:</h6>
-            <blockquote><strong>{{vendor?.number_of_employees}}</strong></blockquote>
-          </div>
-          <div class="usa-width-one-third">
-            <h6 class="usa-heading-alt">Annual Revenue:</h6>
-            <blockquote><strong>{{vendor?.annual_revenue | currency}}</strong></blockquote>
-            <div *ngIf="vendor.sam_location.address">
-              <h6 class="usa-heading-alt">Address:</h6>
-              <blockquote>
-                <strong>{{vendor.sam_location?.address}}</strong><br>
-                <strong>{{vendor.sam_location?.city}}</strong><br>
-                <strong>{{vendor.sam_location?.state}} {{vendor.sam_location?.zipcode}}</strong>
-              </blockquote>
+        <!-- Nav tabs -->
+        <ul class="nav nav-tabs margin-top" role="tablist">
+          <li role="presentation" [class.active]="vw_details">
+            <a aria-controls="details" role="tab" data-toggle="tab" (click)="viewDetails()">
+              <h3 class="alt">Details</h3>
+            </a>
+          </li>
+          <li role="presentation" [class.active]="vw_history">
+            <a aria-controls="history" role="tab" data-toggle="tab" (click)="viewHistory()">
+              <h3 class="alt">Contract History</h3>
+            </a>
+          </li>
+        </ul>
+        <div class="tab-content">
+          <div role="tabpanel" class="tab-pane">
+            <!-- Details content -->
+            <div *ngIf="vw_details">
+
+              <h3>{{vendor.name | titlecase}}</h3>
+              <hr>
+              <div class="usa-grid">
+                <div class="usa-width-one-third">
+                  <h6 class="usa-heading-alt">SAM Registration Expires on:</h6>
+                  <blockquote><strong>{{vendor?.sam_expiration_date | date}}</strong></blockquote>
+                  <h6 class="usa-heading-alt">DUNS:</h6>
+                  <blockquote><strong>{{vendor?.duns}}</strong></blockquote>
+                </div>
+                <div class="usa-width-one-third">
+                  <h6 class="us`a-heading-alt">CAGE Code:</h6>
+                  <blockquote><strong>{{vendor?.cage}}</strong></blockquote>
+                  <h6 class="usa-heading-alt">Employees:</h6>
+                  <blockquote><strong>{{vendor?.number_of_employees}}</strong></blockquote>
+                </div>
+                <div class="usa-width-one-third">
+                  <h6 class="usa-heading-alt">Annual Revenue:</h6>
+                  <blockquote><strong>{{vendor?.annual_revenue | currency}}</strong></blockquote>
+                  <div *ngIf="vendor.sam_location.address">
+                    <h6 class="usa-heading-alt">Address:</h6>
+                    <blockquote>
+                      <strong>{{vendor.sam_location?.address}}</strong><br>
+                      <strong>{{vendor.sam_location?.city}}</strong><br>
+                      <strong>{{vendor.sam_location?.state}} {{vendor.sam_location?.zipcode}}</strong>
+                    </blockquote>
+                  </div>
+                </div>
+
+              </div>
+              <div class="usa-grid" *ngIf="vendor.sam_url">
+                <div class="usa-width-one-whole">
+                  <h6 class="usa-heading-alt">Vendor website:</h6>
+                  <blockquote><a href="//{{vendor?.sam_url}}" target="_blank">{{vendor?.sam_url}}</a></blockquote>
+                </div>
+              </div>
+              <div class="usa-grid">
+                <div class="usa-width-one-whole">
+                  <div class="text-right"><a (click)="toggleSBD()" class="btn-toggle">{{!sbd_col ?
+                      'Show' : 'Hide'}} Set Asides</a></div>
+
+                  <table class="usa-table-borderless">
+
+                    <thead>
+                      <tr>
+                        <!-- <th></th> -->
+                        <th scope="col">Contract Membership</th>
+                        <th scope="col" class="sbd">Contact Info</th>
+                        <th scope="col" [class.hide]="!sbd_col" class="sbd tooltip-bottom" data-tooltip="Small Disadvantaged Business">SB</th>
+                        <th scope="col" [class.hide]="!sbd_col" class="sbd tooltip-bottom" data-tooltip="Small Disadvantaged Business">SDB</th>
+                        <th scope="col" [class.hide]="!sbd_col" class="sbd tooltip-bottom" data-tooltip="8(A)">8(A)</th>
+                        <th scope="col" [class.hide]="!sbd_col" class="sbd tooltip-bottom" data-tooltip="HUBZone">HubZ</th>
+                        <th scope="col" [class.hide]="!sbd_col" class="sbd tooltip-bottom" data-tooltip="Woman Owned">WO</th>
+                        <th scope="col" [class.hide]="!sbd_col" class="sbd tooltip-bottom" data-tooltip="Veteran Owned">VO</th>
+                        <th scope="col" [class.hide]="!sbd_col" class="sbd tooltip-bottom" data-tooltip="Service Disabled Veteran Owned">SDVO</th>
+                        <th scope="col" [class.hide]="!sbd_col" class="sbd tooltip-bottom" data-tooltip="Veterans Affair VIP">VA
+                          VIP</th>
+
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr *ngFor="let item of vendor.pools; let i = index">
+                        <!-- <td class="relative td-checkbox">
+                          <input (change)="onChange(item.piid, $event.target.checked)" name="contracts" type="checkbox"
+                            value="{{item.piid}}">
+                        </td> -->
+                        <td scope="row"><strong class="db" [innerHTML]="getVehicleDescription(item.pool.vehicle.id)"></strong>
+                          <blockquote><span class="uppercase db">Contract Number: </span><strong class="pad-left">{{item.piid}}</strong></blockquote>
+                          <blockquote><span class="uppercase db">Service Categories: </span>
+                            <!-- <discovery-list [id]="'ul-serv_cat-'+i" [items_to_show]="num_show" [items]="item.service_categories"
+                              [key]="'name'"></discovery-list> -->
+                            <strong class="pad-left db" *ngFor="let cat of item.service_categories" [innerHTML]="getServiceCategoryDescription(cat.id)"></strong></blockquote>
+                          <blockquote><span class="uppercase db">Zone(s): </span><strong class="pad-left" [innerHTML]="getZones(item.zones)"></strong></blockquote>
+                        </td>
+                        <td [innerHTML]="getContactInfo(item.contacts)"></td>
+                        <td [class.hide]="!sbd_col" class="sbd" [innerHtml]="returnSetAside(item.setasides, 'SB') ? '&bull;' : ''"></td>
+                        <td [class.hide]="!sbd_col" class="sbd" [innerHtml]="returnSetAside(item.setasides, '27') ? '&bull;' : ''"></td>
+                        <td [class.hide]="!sbd_col" class="sbd" [innerHtml]="returnSetAside(item.setasides, 'A6') ? '&bull;' : ''"></td>
+                        <td [class.hide]="!sbd_col" class="sbd" [innerHtml]="returnSetAside(item.setasides, 'XX') ? '&bull;' : ''"></td>
+                        <td [class.hide]="!sbd_col" class="sbd" [innerHtml]="returnSetAside(item.setasides, 'A2') ? '&bull;' : ''"></td>
+                        <td [class.hide]="!sbd_col" class="sbd" [innerHtml]="returnSetAside(item.setasides, 'A5') ? '&bull;' : ''"></td>
+                        <td [class.hide]="!sbd_col" class="sbd" [innerHtml]="returnSetAside(item.setasides, 'QF') ? '&bull;' : ''"></td>
+                        <td [class.hide]="!sbd_col" class="sbd" [innerHtml]="returnSetAside(item.setasides, 'VIP') ? '&bull;' : ''"></td>
+                      </tr>
+
+                    </tbody>
+                  </table>
+                </div>
+              </div>
             </div>
-          </div>
-
-        </div>
-        <div class="usa-grid" *ngIf="vendor.sam_url">
-          <div class="usa-width-one-whole">
-            <h6 class="usa-heading-alt">Vendor website:</h6>
-            <blockquote><a href="//{{vendor?.sam_url}}" target="_blank">{{vendor?.sam_url}}</a></blockquote>
-          </div>
-        </div>
-        <div class="pad-top">
-          <hr>
-          <div class="usa-width-one-whole pad-top">
-            <div>
-
-              <div class="text-right"><a (click)="toggleSBD()" class="btn-toggle">{{!sbd_col ?
-                  'Show' : 'Hide'}} Set Asides</a></div>
-
-              <table class="usa-table-borderless">
-                <caption>Choose one or more to show only contract history for that selection</caption>
-                <thead>
-                  <tr>
-                    <!-- <th></th> -->
-                    <th scope="col">Contract Membership</th>
-                    <th scope="col" class="sbd">Contact Info</th>
-                    <th scope="col" [class.hide]="!sbd_col" class="sbd tooltip-bottom" data-tooltip="Small Disadvantaged Business">SB</th>
-                    <th scope="col" [class.hide]="!sbd_col" class="sbd tooltip-bottom" data-tooltip="Small Disadvantaged Business">SDB</th>
-                    <th scope="col" [class.hide]="!sbd_col" class="sbd tooltip-bottom" data-tooltip="8(A)">8(A)</th>
-                    <th scope="col" [class.hide]="!sbd_col" class="sbd tooltip-bottom" data-tooltip="HUBZone">HubZ</th>
-                    <th scope="col" [class.hide]="!sbd_col" class="sbd tooltip-bottom" data-tooltip="Woman Owned">WO</th>
-                    <th scope="col" [class.hide]="!sbd_col" class="sbd tooltip-bottom" data-tooltip="Veteran Owned">VO</th>
-                    <th scope="col" [class.hide]="!sbd_col" class="sbd tooltip-bottom" data-tooltip="Service Disabled Veteran Owned">SDVO</th>
-                    <th scope="col" [class.hide]="!sbd_col" class="sbd tooltip-bottom" data-tooltip="Veterans Affair VIP">VA
-                      VIP</th>
-
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr *ngFor="let item of vendor.pools; let i = index">
-                    <!-- <td class="relative td-checkbox">
-                      <input (change)="onChange(item.piid, $event.target.checked)" name="contracts" type="checkbox"
-                        value="{{item.piid}}">
-                    </td> -->
-                    <td scope="row"><strong class="db" [innerHTML]="getVehicleDescription(item.pool.vehicle.id)"></strong>
-                      <blockquote><span class="uppercase db">Contract Number: </span><strong class="pad-left">{{item.piid}}</strong></blockquote>
-                      <blockquote><span class="uppercase db">Service Categories: </span>
-                        <!-- <discovery-list [id]="'ul-serv_cat-'+i" [items_to_show]="num_show" [items]="item.service_categories"
-                          [key]="'name'"></discovery-list> -->
-                        <strong class="pad-left db" *ngFor="let cat of item.service_categories" [innerHTML]="getServiceCategoryDescription(cat.id)"></strong></blockquote>
-                      <blockquote><span class="uppercase db">Zone(s): </span><strong class="pad-left" [innerHTML]="getZones(item.zones)"></strong></blockquote>
-                    </td>
-                    <td [innerHTML]="getContactInfo(item.contacts)"></td>
-                    <td [class.hide]="!sbd_col" class="sbd" [innerHtml]="returnSetAside(item.setasides, 'SB') ? '&bull;' : ''"></td>
-                    <td [class.hide]="!sbd_col" class="sbd" [innerHtml]="returnSetAside(item.setasides, '27') ? '&bull;' : ''"></td>
-                    <td [class.hide]="!sbd_col" class="sbd" [innerHtml]="returnSetAside(item.setasides, 'A6') ? '&bull;' : ''"></td>
-                    <td [class.hide]="!sbd_col" class="sbd" [innerHtml]="returnSetAside(item.setasides, 'XX') ? '&bull;' : ''"></td>
-                    <td [class.hide]="!sbd_col" class="sbd" [innerHtml]="returnSetAside(item.setasides, 'A2') ? '&bull;' : ''"></td>
-                    <td [class.hide]="!sbd_col" class="sbd" [innerHtml]="returnSetAside(item.setasides, 'A5') ? '&bull;' : ''"></td>
-                    <td [class.hide]="!sbd_col" class="sbd" [innerHtml]="returnSetAside(item.setasides, 'QF') ? '&bull;' : ''"></td>
-                    <td [class.hide]="!sbd_col" class="sbd" [innerHtml]="returnSetAside(item.setasides, 'VIP') ? '&bull;' : ''"></td>
-                  </tr>
-
-                </tbody>
-              </table>
+            <!-- End Details content -->
+            <!-- History content -->
+            <div *ngIf="vw_history">
+              <div class="usa-width-one-whole">
+                <!-- Contract History -->
+                <discovery-tbl-contract-history [contract_vehicles]="contract_vehicles" [pools]="vendor.pools" [duns]="duns"></discovery-tbl-contract-history>
+              </div>
             </div>
-
-            <!-- Contract History -->
-            <discovery-tbl-contract-history [contract_vehicles]="contract_vehicles" [pools]="vendor.pools" [duns]="duns"></discovery-tbl-contract-history>
+            <!-- End History content -->
           </div>
+
         </div>
+
+
 
       </div>
     </div>
