--- a/app/frontend/src/app/pages/search/filters/filter-psc.component.html
+++ b/app/frontend/src/app/pages/search/filters/filter-psc.component.html
@@ -2,20 +2,15 @@
   {{name}}
 </button>
 <div id="{{id}}" class="usa-accordion-content" [attr.aria-hidden]="!opened">
-
-  <div class="usa-search">
-
-    <div class="autocomplete form-horizontal">
-      <input id="pscs-input" class="items-input" pattern=".+" [(ngModel)]="psc" type="text" (ngModelChange)="searchTerm($event)"
-        placeholder="Enter PSC Keyword" autocomplete="off">
-      <button class="icon-plus btn-plus" type="submit" (click)="addPSC()">
-        <span class="usa-sr-only">Add NAIC to list</span>
-      </button>
-      <select id="pscs-select" [disabled]="!items" class="items-input">
-        <option *ngFor="let item of items" value="{{item.code}}">{{item.description}}</option>
-      </select>
-    </div>
-
+  <div class="usa-search form-horizontal">
+    <span *ngIf="items_filtered.length===0">There are <strong>no PSCs</strong> for the selected vehicle(s).</span>
+    <select id="select_psc" [disabled]="items_filtered.length===0" [(ngModel)]="psc" class="items-input">
+      <option value="0" selected="selected">Select PSC --</option>
+      <option *ngFor="let item of items_filtered" value="{{item.code}}">{{item.description}}</option>
+    </select>
+    <button class="icon-plus btn-plus" type="submit" (click)="addPSC()" [disabled]="!items || psc === '0'">
+      <span class="usa-sr-only">Add PSC to list</span>
+    </button>
   </div>
   <ul *ngIf="items_selected" class="items-selected">
     <li *ngFor="let psc of items_selected">
