--- a/app/frontend/src/app/pages/search/search.component.css
+++ b/app/frontend/src/app/pages/search/search.component.css
@@ -13,15 +13,71 @@
 }
 th {
   vertical-align: top !important;
-  min-width: 170px !important;
+  position: relative;
 }
-tbody th {
-  min-width: 200px !important;
+thead th:first-child,
+tbody th:first-child {
+  width: auto !important;
+  min-width: 160px !important;
 }
-
+tbody th a {
+  position: absolute;
+  bottom: 10px;
+  font-weight: normal !important;
+}
+.th-vehicle,
+td {
+  min-width: 260px !important;
+  width: 260px !important;
+}
 .toggle {
   border-left: 0px !important;
   min-width: 120px;
+}
+.toggle_more {
+  height: 200px;
+  position: relative;
+  overflow-y: hidden;
+}
+.toggle_more div.gradient {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 70px;
+  background-image: url(/frontend/assets/images/td-gradient.png);
+  background-size: 100% 100%;
+}
+.toggle_more.show_all {
+  height: auto !important;
+}
+.toggle_more.show_all div.gradient {
+  display: none;
+}
+
+.wrapper1,
+.wrapper2 {
+  width: 300px;
+  overflow-x: scroll;
+  overflow-y: hidden;
+}
+
+.wrapper1 {
+  height: 20px;
+}
+.wrapper2 {
+  height: 200px;
+}
+
+.div1 {
+  width: 1000px;
+  height: 20px;
+}
+
+.div2 {
+  width: 1000px;
+  height: 200px;
+  background-color: #88ff88;
+  overflow: auto;
 }
 @media (min-width: 1040px) {
   .usa-grid div.usa-width-one-third {
