--- a/app/frontend/src/app/pages/search/search.component.html
+++ b/app/frontend/src/app/pages/search/search.component.html
@@ -7,7 +7,7 @@
     <!-- FITLERS -->
     <!-- ///////////////// -->
     <div id="filters-container" class="usa-width-one-third bordered">
-      <discovery-filters (emmitFilters)="submitSelectedFilters($event)"></discovery-filters>
+      <discovery-filters [parentSpinner]="spinner" (emmitFilters)="submitSelectedFilters($event)"></discovery-filters>
     </div>
 
     <!-- ///////////////// -->
@@ -44,7 +44,10 @@
                   <p class="usa-alert-text">Please change your criteria and re-submit.</p>
                 </div>
               </div>
-              <div class="overflow" *ngIf="!vendors_no_results">
+
+              <div class="text-right pad-all" *ngIf="scroll_buttons"><a (click)="scrollRight()">Scroll to see more ></a></div>
+              <div id="overflow-compare" class="overflow" *ngIf="!vendors_no_results">
+
                 <div class="usa-alert usa-alert-info" *ngIf="contracts_w_no_records.length>0">
                   <div class="usa-alert-body">
                     <h3 class="usa-alert-heading">There are no vendor results for:
@@ -53,17 +56,17 @@
                     <p class="usa-alert-text">Please change your criteria and re-submit.</p>
                   </div>
                 </div>
-                <table class="usa-table-borderless">
+                <table id="tbl-compare" class="usa-table-borderless">
                   <thead>
                     <tr>
                       <th scope="col"></th>
-                      <th scope="col" *ngFor="let vehicle of compare_tbl" [hidden]="vehicle.vendors_results_total===0">{{vehicle.description}}
+                      <th scope="col" class="th-vehicle" *ngFor="let vehicle of compare_tbl" [hidden]="vehicle.vendors_results_total===0">{{vehicle.description}}
                         <!--<span
-                            class="info-tip"></span>-->
+                              class="info-tip"></span>-->
                       </th>
                       <!-- <th scope="col" *ngFor="let vehicle of compare_tbl"><a (click)="openModal(vehicle.id)">{{vehicle.description}}
-                          <span
-                            class="info-tip"></span></a></th> -->
+                            <span
+                              class="info-tip"></span></a></th> -->
 
                     </tr>
                   </thead>
@@ -78,44 +81,67 @@
                           *ngIf="vehicle.vendors_results_total!=0" (click)="viewVehicleVendors(vehicle.id)">{{vehicle.vendors_results_total}}</button></td>
                     </tr>
                     <tr>
-                      <th scope="row">Eligible Service category(s)</th>
+                      <th scope="row">Eligible Service category(s) <discovery-lnk-toggle-heights [toggle_id]="'row-serv-cat'"
+                          [label]="'categories'" (emitToggleId)="toggleTDHeights($event)"></discovery-lnk-toggle-heights>
+                      </th>
                       <td *ngFor="let vehicle of compare_tbl" [hidden]="vehicle.vendors_results_total===0">
-                        <discovery-list [id]="vehicle.id" [items_to_show]="num_show" [items]="vehicle.service_categories"
-                          [key]="'name'"></discovery-list>
+                        <div class="row-serv-cat toggle_more">
+                          <discovery-list [show_all]="true" [id]="vehicle.id" [items_to_show]="num_show" [items]="vehicle.service_categories"
+                            [key]="'name'"></discovery-list>
+                          <div class="gradient"></div>
+                        </div>
                       </td>
                     </tr>
                     <!-- <tr>
-                      <th scope="row">Top capabilities</th>
-                      <td *ngFor="let vehicle of compare_tbl" [hidden]="vehicle.vendors_results_total===0">{{vehicle.capabilities}}</td>
-                    </tr> -->
+                        <th scope="row">Top capabilities</th>
+                        <td *ngFor="let vehicle of compare_tbl" [hidden]="vehicle.vendors_results_total===0">{{vehicle.capabilities}}</td>
+                      </tr> -->
                     <tr>
-                      <th scope="row">NAICs</th>
+                      <th scope="row">NAICs <discovery-lnk-toggle-heights [toggle_id]="'row-naics'" [label]="'NAIC codes'"
+                          (emitToggleId)="toggleTDHeights($event)"></discovery-lnk-toggle-heights>
+                      </th>
                       <td *ngFor="let vehicle of compare_tbl" [hidden]="vehicle.vendors_results_total===0">
-                        <discovery-list [id]="vehicle.id" [items_to_show]="num_show" [items]="vehicle.naics" [key]="'code'"></discovery-list>
+                        <div class="row-naics toggle_more">
+                          <discovery-list [show_all]="true" [id]="vehicle.id" [items_to_show]="num_show" [items]="vehicle.naics"
+                            [key]="'code'"></discovery-list>
+                          <div class="gradient"></div>
+                        </div>
                       </td>
                     </tr>
                     <tr>
-                      <th scope="row">PSCs</th>
-                      <td *ngFor="let vehicle of compare_tbl" [hidden]="vehicle.vendors_results_total===0">{{vehicle.pscs}}</td>
+                      <th scope="row">PSCs <discovery-lnk-toggle-heights [toggle_id]="'row-pscs'" [label]="'PSCs'"
+                          (emitToggleId)="toggleTDHeights($event)"></discovery-lnk-toggle-heights>
+                      </th>
+                      <td *ngFor="let vehicle of compare_tbl" [hidden]="vehicle.vendors_results_total===0">
+                        <div class="row-pscs toggle_more">
+                          <discovery-list [show_all]="true" [id]="vehicle.id" [items_to_show]="num_show" [items]="vehicle.pscs"
+                            [key]="'description'"></discovery-list>
+                          <div class="gradient"></div>
+                        </div>
+                      </td>
                     </tr>
-                    <!-- <tr>
+                    <tr>
                       <th scope="row">SUM Tier</th>
                       <td *ngFor="let vehicle of compare_tbl" [hidden]="vehicle.vendors_results_total===0">{{vehicle.tier}}</td>
                     </tr>
                     <tr>
                       <th scope="row">GSA Point of Contact</th>
-                      <td *ngFor="let vehicle of compare_tbl" [hidden]="vehicle.vendors_results_total===0">{{vehicle.gsa}}</td>
+                      <td *ngFor="let vehicle of compare_tbl" [hidden]="vehicle.vendors_results_total===0"><a href="mailto:{{vehicle.gsa}}"
+                          *ngIf="vehicle.gsa !== ''">Contact email</a></td>
                     </tr>
-                    <tr>
+                    <!-- <tr>
                       <th scope="row">Solution Website</th>
                       <td *ngFor="let vehicle of compare_tbl" [hidden]="vehicle.vendors_results_total===0">{{vehicle.website}}</td>
-                    </tr>
+                    </tr> -->
                     <tr>
                       <th scope="row">Ordering Guide</th>
-                      <td *ngFor="let vehicle of compare_tbl" [hidden]="vehicle.vendors_results_total===0">{{vehicle.ordering_guide}}</td>
-                    </tr> -->
+                      <td *ngFor="let vehicle of compare_tbl" [hidden]="vehicle.vendors_results_total===0"><a href="{{vehicle.ordering_guide}}"
+                          title="Ordering guide for " *ngIf="vehicle.ordering_guide !== ''" target="_blank">Download
+                          Guide</a></td>
+                    </tr>
                   </tbody>
                 </table>
+
               </div>
             </div>
             <!-- Vendors results -->
