--- a/app/frontend/src/app/pages/resources/resources.component.html
+++ b/app/frontend/src/app/pages/resources/resources.component.html
@@ -1,6 +1,63 @@
-<div class="usa-grid pad-top-bottom">
-  <div class="usa-width-one-whole">
-    <h1>Resources</h1>
-    Content goes here
-  </div>
-</div>
+<main id="main-content">
+  <section class="usa-hero">
+    <div class="usa-grid text-center">
+      <h1>Resources</h1>
+    </div>
+  </section>
+  <section class="usa-section usa-graphic_list">
+    <div class="usa-grid usa-graphic_list-row">
+      <div class="usa-width-one-half usa-media_block">
+        <div class="circle">
+          <h3>OASIS</h3>
+        </div>
+
+        <div class="usa-media_block-body">
+          <h3>One Acquisition Solution for Integrated Service</h3>
+          <p>OASIS and OASIS Small Business (SB) are multiple award, Indefinite Delivery Indefinite Quantity (IDIQ)
+            contracts that provide flexible and innovative solutions for complex professional services. </p>
+          <a aria-label="Learn more about OASIs" [routerLink]="['/oasis']">Learn more</a>
+        </div>
+      </div>
+      <div class="usa-width-one-half usa-media_block">
+        <div class="circle">
+          <h3>BMO</h3>
+        </div>
+
+        <div class="usa-media_block-body">
+          <h3>Building Maintenance and Operations</h3>
+          <p>Building Maintenance and Operations (BMO) strategic sourcing solution is a comprehensive and flexible
+            solution covering all high-demand BMO services.</p>
+          <a aria-label="Learn more about OASIs" [routerLink]="['/bmo']">Learn more</a>
+        </div>
+      </div>
+    </div>
+    <div class="usa-grid usa-graphic_list-row">
+      <div class="usa-width-one-half usa-media_block">
+        <div class="circle">
+          <h3>HCaTS</h3>
+        </div>
+
+        <div class="usa-media_block-body">
+          <h3>Human Capital and Training Solutions</h3>
+          <p>The HCaTS Program is the result of partnership between Office of Personnel Management (OPM) and General
+            Services Administration (GSA). </p>
+          <a aria-label="Learn more about OASIs" [routerLink]="['/hcats']">Learn more</a>
+        </div>
+      </div>
+      <div class="usa-width-one-half usa-media_block">
+        <div class="circle">
+          <h3>PSS</h3>
+        </div>
+
+        <div class="usa-media_block-body">
+          <h3>Professional Services Schedule</h3>
+          <p>The Professional Services Schedule (PSS) is an indefinite delivery/indefinite quantity (IDIQ) multiple
+            award schedule, providing direct access to simple or complex fixed-price or labor-hour professional
+            services.</p>
+          <a aria-label="Learn more about OASIs" [routerLink]="['/pss']">Learn more</a>
+        </div>
+      </div>
+    </div>
+  </section>
+
+</main>
