--- a/app/frontend/src/app/app.component.html
+++ b/app/frontend/src/app/app.component.html
@@ -1,138 +1,143 @@
-<a class="usa-skipnav" href="#main-content">Skip to main content</a>
-<section class="usa-banner">
-  <div class="usa-accordion">
-    <header class="usa-banner-header">
-      <div class="usa-grid usa-banner-inner">
-        <img src="{{APP_ASSETS}}assets/uswds/img/favicons/favicon-57.png" alt="U.S. flag">
-        <p>An official website of the United States government</p>
-        <button class="usa-accordion-button usa-banner-button" aria-expanded="false" aria-controls="gov-banner">
-          <span class="usa-banner-button-text">Here's how you know</span>
-        </button>
-      </div>
-    </header>
-    <div class="usa-banner-content usa-grid usa-accordion-content" id="gov-banner">
-      <div class="usa-banner-guidance-gov usa-width-one-half">
-        <img class="usa-banner-icon usa-media_block-img" src="{{APP_ASSETS}}assets/uswds/img/icon-dot-gov.svg" alt="Dot gov">
-        <div class="usa-media_block-body">
-          <p>
-            <strong>The .gov means it’s official.</strong>
-            <br> Federal government websites often end in .gov or .mil. Before sharing sensitive information, make sure
-            you’re
-            on a federal government site.
-          </p>
+<div id="discovery">
+  <a class="usa-skipnav" href="#main-content">Skip to main content</a>
+  <section class="usa-banner">
+    <div class="usa-accordion">
+      <header class="usa-banner-header">
+        <div class="usa-grid usa-banner-inner">
+          <img src="{{APP_ASSETS}}assets/uswds/img/favicons/favicon-57.png" alt="U.S. flag">
+          <p>An official website of the United States government</p>
+          <button class="usa-accordion-button usa-banner-button" aria-expanded="false" aria-controls="gov-banner">
+            <span class="usa-banner-button-text">Here's how you know</span>
+          </button>
         </div>
-      </div>
-      <div class="usa-banner-guidance-ssl usa-width-one-half">
-        <img class="usa-banner-icon usa-media_block-img" src="{{APP_ASSETS}}assets/uswds/img/icon-https.svg" alt="Https">
-        <div class="usa-media_block-body">
-          <p>
-            <strong>The site is secure.</strong>
-            <br> The
-            <strong>https://</strong> ensures that you are connecting to the official website and that any information
-            you
-            provide is encrypted and transmitted securely.
-          </p>
+      </header>
+      <div class="usa-banner-content usa-grid usa-accordion-content" id="gov-banner">
+        <div class="usa-banner-guidance-gov usa-width-one-half">
+          <img class="usa-banner-icon usa-media_block-img" src="{{APP_ASSETS}}assets/uswds/img/icon-dot-gov.svg" alt="Dot gov">
+          <div class="usa-media_block-body">
+            <p>
+              <strong>The .gov means it’s official.</strong>
+              <br> Federal government websites often end in .gov or .mil. Before sharing sensitive information, make
+              sure
+              you’re
+              on a federal government site.
+            </p>
+          </div>
+        </div>
+        <div class="usa-banner-guidance-ssl usa-width-one-half">
+          <img class="usa-banner-icon usa-media_block-img" src="{{APP_ASSETS}}assets/uswds/img/icon-https.svg" alt="Https">
+          <div class="usa-media_block-body">
+            <p>
+              <strong>The site is secure.</strong>
+              <br> The
+              <strong>https://</strong> ensures that you are connecting to the official website and that any
+              information
+              you
+              provide is encrypted and transmitted securely.
+            </p>
+          </div>
         </div>
       </div>
     </div>
-  </div>
-</section>
-<header class="usa-header usa-header-basic usa-header-basic-megamenu" role="banner">
-  <div class="usa-nav-container">
-    <div class="usa-navbar">
-      <div class="discovery-logo">
-        <a href="/" title="Home" aria-label="Home">
-          <img src="{{APP_ASSETS}}assets/images/discovery-icon.png" width="95" height="95" alt="Discovery icon" />
-          <strong>Discovery</strong>
-          <em>Marque Research Tool</em>
-        </a>
+  </section>
+  <header class="usa-header usa-header-basic usa-header-basic-megamenu" role="banner">
+    <div class="usa-nav-container">
+      <div class="usa-navbar">
+        <div class="discovery-logo">
+          <a href="/" title="Home" aria-label="Home">
+            <img src="{{APP_ASSETS}}assets/images/discovery-icon.png" width="95" height="95" alt="Discovery icon" />
+            <strong>Discovery</strong>
+            <em>Marque Research Tool</em>
+          </a>
+        </div>
+        <button class="usa-menu-btn">Menu</button>
       </div>
-      <button class="usa-menu-btn">Menu</button>
+      <nav role="navigation" class="usa-nav">
+        <div class="usa-nav-inner">
+          <button class="usa-nav-close">
+            <img src="{{APP_ASSETS}}assets/uswds/img/close.svg" alt="close">
+          </button>
+          <ul class="usa-nav-primary">
+            <li>
+              <button class="usa-nav-link" [routerLink]="['/']" routerLinkActive="usa-current"
+                [routerLinkActiveOptions]="{exact:true}">
+                <span>Home</span>
+              </button>
+            </li>
+            <li>
+              <button class="usa-nav-link" [routerLink]="['/search']" queryParamsHandling="preserve" routerLinkActive="usa-current">
+                <span>Advanced Search</span>
+              </button>
+            </li>
+            <li>
+              <button class="usa-nav-link" [routerLink]="['/about']" routerLinkActive="usa-current">
+                <span>About</span>
+              </button>
+            </li>
+            <li>
+              <button class="usa-nav-link" [routerLink]="['/resources']" routerLinkActive="usa-current">
+                <span>Resources</span>
+              </button>
+            </li>
+            <li>
+              <button class="usa-nav-link" [routerLink]="['/help']" routerLinkActive="usa-current">
+                <span>Help</span>
+              </button>
+            </li>
+          </ul>
+        </div>
+      </nav>
     </div>
-    <nav role="navigation" class="usa-nav">
-      <div class="usa-nav-inner">
-        <button class="usa-nav-close">
-          <img src="{{APP_ASSETS}}assets/uswds/img/close.svg" alt="close">
-        </button>
-        <ul class="usa-nav-primary">
+  </header>
+  <div class="usa-overlay"></div>
+
+  <main id="main-content">
+    <!-- {% verbatim %} -->
+    <router-outlet></router-outlet>
+    <!-- {% endverbatim %} -->
+  </main>
+  <!-- START Footer -->
+  <footer class="usa-section usa-section-dark usa-graphic_list">
+    <div class="usa-grid">
+      <div class="usa-width-one-third">
+        <h3>Need Help?</h3>
+        <p class="usa-width-two-thirds">For further assistance, please contact:
+          <br>GSA Technology Solutions 24 hours a day, Mon - Fri
+          <br>
+          <a href="/">Need Help with finding a contract?</a>
+        </p>
+      </div>
+      <div class="usa-width-one-third">
+        <h3>Discovery</h3>
+        <ul>
           <li>
-            <button class="usa-nav-link" [routerLink]="['/']" routerLinkActive="usa-current" [routerLinkActiveOptions]="{exact:true}">
-              <span>Home</span>
-            </button>
+            <a href="/">About</a>
           </li>
           <li>
-            <button class="usa-nav-link" [routerLink]="['/search']" queryParamsHandling="preserve" routerLinkActive="usa-current">
-              <span>Advanced Search</span>
-            </button>
+            <a href="/">Resources</a>
           </li>
           <li>
-            <button class="usa-nav-link" [routerLink]="['/about']" routerLinkActive="usa-current">
-              <span>About</span>
-            </button>
+            <a href="/">Contact</a>
           </li>
-          <li>
-            <button class="usa-nav-link" [routerLink]="['/resources']" routerLinkActive="usa-current">
-              <span>Resources</span>
-            </button>
-          </li>
-          <li>
-            <button class="usa-nav-link" [routerLink]="['/help']" routerLinkActive="usa-current">
-              <span>Help</span>
-            </button>
-          </li>
+
         </ul>
       </div>
-    </nav>
-  </div>
-</header>
-<div class="usa-overlay"></div>
+      <div class="usa-width-one-third">
+        <h3>Your Opinion Matters!</h3>
+        <p>Tell us what you think by submitting
+          <a href="#">feedback</a>.</p>
+      </div>
 
-<main id="main-content">
-  <!-- {% verbatim %} -->
-  <router-outlet></router-outlet>
-  <!-- {% endverbatim %} -->
-</main>
-<!-- START Footer -->
-<footer class="usa-section usa-section-dark usa-graphic_list">
-  <div class="usa-grid">
-    <div class="usa-width-one-third">
-      <h3>Need Help?</h3>
-      <p class="usa-width-two-thirds">For further assistance, please contact:
-        <br>GSA Technology Solutions 24 hours a day, Mon - Fri
-        <br>
-        <a href="/">Need Help with finding a contract?</a>
-      </p>
     </div>
-    <div class="usa-width-one-third">
-      <h3>Discovery</h3>
-      <ul>
-        <li>
-          <a href="/">About</a>
-        </li>
-        <li>
-          <a href="/">Resources</a>
-        </li>
-        <li>
-          <a href="/">Contact</a>
-        </li>
-
-      </ul>
-    </div>
-    <div class="usa-width-one-third">
-      <h3>Your Opinion Matters!</h3>
-      <p>Tell us what you think by submitting
-        <a href="#">feedback</a>.</p>
-    </div>
-
-  </div>
-  <div class="usa-grid">
-    <div id="gsa" class="usa-width-one-whole">
-      <hr>
-      <div>
-        <img src="{{APP_ASSETS}}assets/images/gsa-logo.jpg" width="60" height="60px" alt="GSA">
-        <h2>U.S. General Services Administration</h2>
+    <div class="usa-grid">
+      <div id="gsa" class="usa-width-one-whole">
+        <hr>
+        <div>
+          <img src="{{APP_ASSETS}}assets/images/gsa-logo.jpg" width="60" height="60px" alt="GSA">
+          <h2>U.S. General Services Administration</h2>
+        </div>
       </div>
     </div>
-  </div>
-</footer>
-<!-- END Footer -->
+  </footer>
+  <!-- END Footer -->
+</div>
