--- a/app/frontend/src/app/pages/search/search.component.css
+++ b/app/frontend/src/app/pages/search/search.component.css
@@ -67,17 +67,34 @@ td {
 .wrapper2 {
   height: 200px;
 }
-
 .div1 {
   width: 1000px;
   height: 20px;
 }
-
 .div2 {
   width: 1000px;
   height: 200px;
   background-color: #88ff88;
   overflow: auto;
+}
+
+#btn-show-filters {
+  display: none;
+}
+#btn-show-filters span.icon-filter {
+  margin: 1px 6px 0 0;
+  width: 16px;
+  height: 16px;
+}
+#overlay-filter-mobile {
+  height: 100%;
+  width: 0;
+  position: fixed;
+  z-index: 8000;
+  left: 0;
+  top: 0;
+  background-color: rgba(0, 0, 0, 0.8);
+  overflow-x: hidden;
 }
 @media (min-width: 1040px) {
   .usa-grid div.usa-width-one-third {
@@ -87,5 +104,20 @@ td {
   .usa-grid div.usa-width-two-thirds {
     margin-right: 0;
     width: 74.31059%;
+  }
+}
+@media (max-width: 1330px) {
+  #btn-show-filters {
+    display: block;
+  }
+  .usa-width-two-thirds {
+    width: 95% !important;
+    margin: auto !important;
+    float: none !important;
+  }
+}
+@media (max-width: 640px) {
+  #overlay-filter-mobile.show {
+    width: 100%;
   }
 }
